--- a/index.html
+++ b/index.html
@@ -2,27 +2,100 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <title>Bootstrap, Y'all!</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <h1>First Bootstrap Project</h1>
+        </div>
+        <div class="row">
+            <div class="col-4 justify-content-start">
+                Be
+            </div>
+            <div class="col-4 justify-content-center">
+                Right
+            </div>
+            <div class="col-4 justify-content-end">
+                Back
+            </div>
+        </div>
+        <div class="row">
+            <form class="col-12 p-3 border border-primary" action="">
+                <div class="p-1">
+                    <input type="email" name="submit-email"> Email
+                </div>
+                <div class="p-1">
+                    <input type="password" class="password"> Password
+                </div>
+                <div class="p-1">
+                    <input type="checkbox" name="Cats" id=""> Cats (correct choice)
+                </div>
+                <div class="p-1">
+                    <input type="checkbox" name="Dogs" id=""> Dogs (incorrect choice)
+                </div>
+                <div class="p-1">
+                    <input type="radio" name="radio1" id=""> Cheese Pizza
+                </div>
+                <div class="p-1">
+                    <input type="radio" name="radio1" id=""> Hawaiian Pizza
+                </div>
+                <div class="p-1">
+                    <input type="radio" name="radio1" id=""> Supreme Pizza (Glory be the the Leader)
+                </div>
+                <div class="p-1">
+                    <button class="btn btn-success" type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+        <div class="row p-3">
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Katie</h4>
+                <p class="card-body">My best friend and spouse! I love her more than Churchill love cigars!</p>
+            </div>
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Paul</h4>
+                <p class="card-body">One of my longest friendships. He's more of a brother than anything.</p>
+            </div>
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Chris</h4>
+                <p class="card-body">My old boss. He's also a fighter-mage in my D&D campaign. He might die this next session!</p>
+            </div>
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Caleb</h4>
+                <p class="card-body">Caleb is my cousin, only 25 days older than me. We grew up in Prattville together.</p>
+            </div>
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Houston</h4>
+                <p class="card-body">An old work friend of mine. He's from Hayden, Alabama. One of the most open minded people I've ever met.</p>
+            </div>
+            <div class="card col-sm-4">
+                <h4 class="card-title text-center">Clayton</h4>
+                <p class="card-body">Another former co-worker and D&D buddy. He's a fighter who might also die this next session!</p>
+            </div>
+        </div>
+    </div>
 
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
 
